# clockio.v3

./: README.md  pyproject.toml
clock/: admin.py  models.py  serializers.py  urls.py  views.py
clock/migrations/: 0001_initial.py  0002_remove_clock_check_in_date_and_more.py  0003_alter_clock_check_in_alter_clock_check_out.py  0004_remove_clock_user_alter_clock_updated_by.py
core/: settings.py  urls.py
users/: admin.py  models.py  permissions.py
users/migrations/: 0001_initial.py
