[tool.poetry]
name = "clockio.v3"
version = "0.1.0"
description = ""
authors = ["João Aguiar <macdjoao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
